# Hive-Mind-v1-

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  hivemind.json  package-lock.json  package.json
docs/: AI_AGENTS.md  COLLABORATION.md  DEVELOPMENT.md  PERFORMANCE.md  PLUGINS.md  TESTING.md
electron/: main.js  preload.js
projects/my-project/: main.ts
src/: Agent.ts  demo.html  demo.ts  index.ts  package-lock.json  tsconfig.json
src/core/: AgentHub.ts  ApiProvider.ts  KeyVault.ts  ProviderFactory.ts  SessionManager.ts
src/crdt-engine/: Cargo.toml
src/crdt-engine/src/: lib.rs
src/extension/: package.json  tsconfig.json
src/extension/src/: extension.ts
src/extension/src/decorations/: CursorDecorationManager.ts
src/extension/src/views/: AgentHubProvider.ts  MissionControlProvider.ts  SessionProvider.ts
src/sync/: CollaborativeSession.ts  P2PManager.ts  SignalingClient.ts  SyncEngine.ts
src/ui/: index.ts
src/ui/components/: AgentHubPanel.tsx  AgentPanel.tsx  BudgetMeter.tsx  CursorOverlay.tsx  KeyVaultSettings.tsx  MissionControl.tsx  SessionIndicator.tsx
src/webapp/: index.html
