[package]
name = "hivemind-crdt"
version = "0.1.0"
edition = "2021"
authors = ["HiveMind Contributors"]
description = "CRDT sync engine for HiveMind IDE"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
